--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,9 @@ h1 {
 h2 {
   font-size: 1.35em;
 }
+h3.ng-scope {
+  font-size: 17px;
+}
 input:focus, 
 textarea:focus, 
 button:focus {
@@ -472,6 +475,9 @@ button.navbar-toggle.collapsed:hover .icon-bar:nth-child(3){
 .navbar-nav li a{
   color: #ffffff!important;
 }
+.light-font {
+  color: #000000;
+}
 .info-page h1 span:not(.light-font) {
   display: inline-block;
   width: 85%;
@@ -582,7 +588,7 @@ ul.right-links li a {
   font-size: 1.15em;
   border: 1px solid #ffffff;
   background-color: #2a2a2a;
-  padding: 14px 14px 10;
+  padding: 14px 14px 10px;
   color: #ffffff;
   margin: 5px;
   border-radius: 2px;
@@ -671,6 +677,9 @@ ul.right-links li a:hover {
   font-weight: 600;
 
 }
+.box {
+  height: auto; 
+}
 .haut .more-search-results a {
   text-decoration: none;
   color: #ffffff;
@@ -700,6 +709,9 @@ footer {
 footer.margin {
   margin-top: 2.5em;
 }
+ul.site-links {
+  padding: 0 15px;
+}
 ul.site-links li {
   margin-bottom: 10px
 }
@@ -725,7 +737,7 @@ footer p {
 }
 .social-media li {
   display: inline;
-  padding-left: 1.45em; 
+  padding-left: .25em; 
 }
 .social-media .separator {
   font-size: 1.5em;
@@ -845,6 +857,9 @@ footer p {
 .box-container a {
   text-decoration: underline;
 }
+.search-results {
+  padding-bottom: 30px;
+}  
 .search-results .row {
     margin-top: 30px;
 }
@@ -855,7 +870,7 @@ footer p {
 .text {
   width: 80%;
   margin: 30px auto;
-  height: 100px;
+  height: 95px;
   overflow: hidden;
 }
 .text a {
@@ -868,6 +883,7 @@ footer p {
   position: relative;
   float: right;
   top: .8em;
+  right:15px;
   font-size: 1.35em;
 }
 .suosikkit:hover {
@@ -921,6 +937,7 @@ footer p {
 }
 .compare-button {
   height: 50px;
+  margin-right: 15px;
 }
 .search-box.haku::before {
   width: 81px;
@@ -940,8 +957,51 @@ footer p {
   -moz-box-shadow: 3px 0px 10px 0px rgba(50, 50, 50, 0.69);
   box-shadow: 3px 0px 10px 0px rgba(50, 50, 50, 0.69);
 }
+.search-box::after {
+  display: inline-block;
+  margin: 0 0 8px 20px;
+  min-height: 237px;
+  height: auto;
+  content: " ";
+  position: absolute;
+  text-shadow: none;
+  width: 15px;
+  top: 0px;
+  bottom: 0;
+  right: 0;
+}
+.search-box.amk::after {
+  background-color: #17bc9c;
+}
+.search-box.lk::after {
+  background-color: #e24a3c;
+}
+.search-box.kk::after {
+  background-color: #9c56b8;
+}
+.search-box.ako::after {
+  background-color: #0ea4d7;
+}
+.search-box.tk::after {
+  background-color: #d8e00f;
+}
+.separator {
+  margin-top: 60px;
+}
+.suggested-courses {
+  border: 1px solid #075c79;
+  background: #e7f2f6;
+  min-height: 100px;
+  height: auto;
+  margin-top: 30px;
+}
+.container-fluid.courses {
+  background: #e7f2f6;
+}
 .compare-button span {
   border: 1px solid #4d93d9;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
   border-radius: 20px;
   max-width: 200px;
   width: auto;
@@ -963,6 +1023,35 @@ footer p {
 }
 .compare-button span.poista::after {
   content: "Poista vertailuun";
+  color: #ffffff;
+}
+#koulutusModal .compare-button {
+  border: 1px solid #ffffff;
+  color: transparent;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  border-radius: 20px;
+  max-width: 200px;
+  height: 35px;
+  float: right;
+  text-align: center;
+}
+#koulutusModal .compare-button span {
+  border: 1px solid #4d93d9;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  border-radius: 20px;
+  max-width: 200px;
+  width: auto;
+
+  float: right;
+  text-align: center;
+  -webkit-transition: all ease-in .25s;
+  -moz-transition: all ease-in .25s;
+  transition: all ease-in .25s;
+}
+#koulutusModal .compare-button span::after {
+  content: "Ota vertailuun";
   color: #ffffff;
   transition: all ease-in .5s;
 }
@@ -1130,7 +1219,27 @@ span.cr.ch-5 {
 }
 .info-page .panel-heading h4 {
   font-size: 1.35em;
-  font-weight: 500;
+}
+ul.accordion {
+  padding: 0;
+}
+
+.osaamisalat {
+  font-weight:bold;
+  font-size: 18px; 
+}
+.osaamisalat::after {
+  content: "\f107";
+  margin-left: 10px;
+  font-family: "FontAwesome";
+}
+.accordion .inner.show {
+  display: block;
+}
+.osaamisalat.show::after {
+  content: "\f106";
+  margin-left: 10px;
+  font-family: "FontAwesome";
 }
 .info-page .panel-heading a:hover,
 .info-page .panel-heading a:visited,
@@ -1140,6 +1249,13 @@ span.cr.ch-5 {
 .info-page .panel-body {
   color: #000000;
 }
+ul.tutkinnon-osat {
+  padding: 0;
+  font-size: 1.2em;
+}
+ul.tutkinnon-osat li {
+  padding: .65em 0;
+}
 .right-column img {
   width: 100%;
   position: relative;
@@ -1148,13 +1264,26 @@ span.cr.ch-5 {
 .right-column {
   background-color: #ecf3fd;
   border-left: 1px solid #979797;
-  height: calc(100% + 150px);
+}
+.left-column {
+  margin-top: 30px;
+}
+.left-column,
+.right-column {
+  margin-bottom: -99999px;
+  padding-bottom: 99999px;
+}
+ul.ng-scope {
+  list-style-type: disc;
+}
+ul.ng-scope ul {
+  list-style-type: circle;
 }
 .right-column ul {
   padding: 3% 0;
 }
 .right-column li {
-  padding: 2%;
+  padding: 2% 0;
 }
 .right-column a.external-link {
   color: #4d93d9;
@@ -1171,7 +1300,6 @@ p.student-comment {
   border-bottom: 1px solid #979797;
 }
 .oppilaitos .right-column {
-  height: calc(100% + 200px);
   background-color: transparent; 
   padding-top: 30px;
 }
@@ -1186,6 +1314,9 @@ p.student-comment {
 }
 .modal-body {
   padding: 0 30px 15px;
+}
+.info-page {
+  overflow: hidden;
 }
 .info-page .panel-body p {
   font-size: 1.2em;
@@ -1216,39 +1347,13 @@ p.student-comment {
 }
 .modal-header,
 .modal-body,
-.modal-content {
+.modal-content,
+.modal-footer {
   background: #2c97df;
 }
 .modal-header,
 .modal-footer {
   border: none;
-}
-.modal-footer {
-  background: #003478;
-}
-.modal-footer i.fa.fa-university {
-  float: left;
-  text-align: center;
-}
-.modal-footer i.fa.fa-university::after {
-  content: "Oppilaitoksen esittely";
-  display: block;
-  font-size: 0.45em;
-  padding-top: .5em;
-
-}
-.modal-footer i.fa.fa-book {
-  text-align: center;
-}
-.modal-footer i.fa.fa-book::after {
-  content: "Lue lisää";
-  display: block;
-  font-size: 0.45em;
-  padding-top: .5em;
-
-}
-.modal-footer i {
-  font-size: 2em;
 }
 .modal .school-link {
   color: #ffffff;
@@ -1310,7 +1415,7 @@ p.student-comment {
   margin: 0 auto;
 }
 .info-page .left-column h1 i {
-  color: #ec1c2c;
+  color: #7ed222;
   position: relative;
   top: 10px;
 }  
@@ -1348,6 +1453,10 @@ p.student-comment {
 .carousel {
   margin-top:30px;
 }
+.carousel-inner {
+  max-height: 298px;
+  overflow: hidden;
+}
 .right-column iframe {
   width: 100%;
   max-height: 400px;
@@ -1359,6 +1468,7 @@ p.student-comment {
   content: "\f190";
   font-size: 2em;
   float: left;
+  color: #000000;
   padding: 0 1.5% 0 0;
 }
 .left-column.toteutus h1 i{
@@ -1429,14 +1539,14 @@ p.btn-education .btn-default{
   font-weight: 600;
 }
 .toteutus-green .btn-education {
-  margin: 40px 0;
+  margin: 30px 0 0;
 }
 .toteutus-green p {
   margin-top: 19px;
   padding-left: 15px;
 }
 strong {
-  font-weight: 500;
+  font-weight: bold;
 }
 #compare-row.hidden {
   -webkit-transition: all 0.25s ease;
@@ -1468,7 +1578,8 @@ strong {
   margin: 0 auto;
 }
 #compare-row .pull-right a:nth-child(1),
-.filter-options .action-buttons a:nth-child(1)
+.filter-options .action-buttons a:nth-child(1),
+.tutustu-button
  {
   margin: 85px auto 20px;
   padding: 20px;
@@ -1485,6 +1596,45 @@ strong {
   background-image: -webkit-linear-gradient(bottom, #5B9AE2 0%, #4584CC 100%);
   background-image: -ms-linear-gradient(bottom, #5B9AE2 0%, #4584CC 100%);
   background-image: linear-gradient(to bottom, #5B9AE2 0%, #4584CC 100%);
+}
+a.btn.btn-primary.tutustu-button {
+  display: block;
+  margin: 0;
+}
+.oppilaitos .right-column h1 a {
+  color: #000000;
+  pointer-events: none;
+  cursor: text;
+  text-decoration: none;
+}
+.oppilaitos .right-column h1 a span {
+  color: #000000;
+}
+
+.right-column i.fa.fa-circle {
+  color: #e77e22;
+  font-size: 12em;
+  -webkit-text-shadow: 1px 1px 13px rgba(150, 150, 150, 0.85);
+  -moz-text-shadow: 1px 1px 13px rgba(150, 150, 150, 0.85);
+  text-shadow: 1px 1px 13px rgba(150, 150, 150, 0.85);
+}
+li.hae {
+  text-align: center;
+}
+li.hae a {
+  position: relative;
+  left: 15%;
+}
+li.hae a::after {
+  content: "HAE TÄHÄN KOULUTUKSEEN!";
+  position: relative;
+  display: inline-block;
+  top: -56px;
+  left: -155px;
+  text-align: left;
+  width: 100px;
+  color: #ffffff;
+  font-weight: bold;
 }
 .compare-box {
   border: 1px solid #0ea4d7;
@@ -1614,13 +1764,97 @@ button.toggle-compare.closed::after {
 .compare-table {
   font-weight: bold;
 }
+.app-navigation-bar {
+  position: -webkit-sticky;
+  position: sticky;
+  min-height: 20px;
+  height: auto;
+  padding: 5px 0;
+  bottom: 0;
+  background: #159ecc;
+}
+.app-navigation-bar a {
+  color: #ffffff;
+}
+.app-navigation-bar .fa-circle-thin:before {
+  font-size: 3.8em;
+}
+.app-navigation-bar .previous {
+  text-align: left;
+}
+.app-navigation-bar .previous a::after {
+  content: "Edellinen";
+  position: relative;
+  display: block;
+  left: -5px;
+}
+.app-navigation-bar .previous i::after {
+font-family: "FontAwesome";
+content:"\f104";
+position: relative;
+font-size: 35px;
+left: -31px;
+top: -7px;
+}
+.app-navigation-bar .search i::after {
+  font-family: "FontAwesome";
+  content: "\f002";
+  position: relative;
+  left: -33px;
+  top: -12px;
+  font-size: 21px;
+}
+.app-navigation-bar .search {
+  text-align: center;
+}
+.app-navigation-bar .search a::after {
+  content: "Etsinän tulos";
+  position: relative;
+  display: block;
+  left: -10px;
+}
+.app-navigation-bar .next {
+  text-align: right;
+}
+.app-navigation-bar .next a::after {
+  content: "Seuraava";
+  position: relative;
+  display: block;
+  left: -4px; 
+}
+.app-navigation-bar .next i::after {
+ font-family: "FontAwesome";
+ content:"\f105";
+ position: relative;
+ font-size: 35px;
+ left: -27px;
+ top: -7px;
+}
+.toteutus .header span:not(.light-font) {
+  color: #000000;
+  font-weight: bold;
+  margin-left: 0;
+}
+.table.table-striped {
+  font-size: inherit;
+}
+p.just-info {
+  font-weight: bold;
+}
+.search-box .text a {
+  font-weight: bold;
+  font-size: 1em;
+}
+.interest-boxes {
+  margin-bottom: 40px;
+}
 @media (max-width: 1200px) {
   .globe i {
     font-size: 5.25em;
   }
   .text {
     width: 70%;
-    max-height: 120px;
+    max-height: 92px;
     height: auto;
   }
 }
@@ -1685,6 +1919,9 @@ button.toggle-compare.closed::after {
   .panel .content {
     height: 20px;
   }
+  ul.tutkinnon-osat {
+    font-size: 1em;
+  }
   .haut {
     width: 100%;
   }
@@ -1737,9 +1974,13 @@ button.toggle-compare.closed::after {
     width: 165px;
     height: 40px
   }
+  .panel-body .info {
+    max-height: fit-content;
+    margin-bottom: 30px;
+  }
   .filter-button::after {
     position: relative;
-    top: 25%;
+    top: 21%;
     left: 12%;
     font-size: .95em;
   }
@@ -1776,10 +2017,14 @@ button.toggle-compare.closed::after {
     top: 11px;
   }
   .right-column {
-    margin: 30px 0;
+    margin: 30px 0 ;
     min-height: 120px;
     height: auto;
   }
+  .left-column, .right-column {
+    margin-bottom: 30px;
+    padding-bottom: 0;
+}
   .social-media li {
     display: inline;
     padding-left: 0.5em;
@@ -1811,6 +2056,11 @@ h1 {
 .info-page.oppilaitos .left-column h1 i::after {
   left: 13px;
   top:13px;
+}
+.toteutus .header span:not(.light-font) {
+  color: #000000;
+  font-weight: bold;
+  margin: -.01em;
 }
 .info-page .left-column h1 i::after {
   left: 5px;
@@ -1859,6 +2109,36 @@ button.toggle-compare {
   position: fixed;
   z-index: 100;
 }
+.app-navigation-bar {
+  margin-top: 0;
+  padding: 1px 0;
+}
+.app-navigation-bar .fa-circle-thin:before {
+  font-size: 2.95em;
+}
+.app-navigation-bar .search i::after {
+  left: -27px;
+  top: -9px;
+  font-size: 19px;
+}
+.app-navigation-bar .next i::after {
+  font-size: 32px;
+  left: -22px;
+  top: -4px;
+}
+.app-navigation-bar .previous i::after {
+  font-size: 32px;
+  left: -26px;
+  top: -4px;
+}
+.courses h1 {
+  color: #898989;
+}
+}
+@media (max-width: 481px) {
+  .toteutus .header span:not(.light-font) {
+    margin: 0em 2em;
+  }
 }
 @media (max-width: 425px) {
   .info-page .left-column h1 i {
@@ -1876,10 +2156,16 @@ button.toggle-compare {
 .filter-button {
   top: 10px;
 }
+.toteutus .header span:not(.light-font) {
+  margin: -.5em 1.3em .5em;
+}
 }
 @media (max-width: 375px) {
   .header-search input {
     width: 70%;
+}
+.app-navigation-bar a::after {
+  font-size: 0.85em;
 }
 }
 @media (min-width: 768px) {
