--- a/css/styles.css
+++ b/css/styles.css
@@ -480,8 +480,12 @@ button.navbar-toggle.collapsed:hover .icon-bar:nth-child(3){
 }
 .info-page h1 span:not(.light-font) {
   display: inline-block;
-  width: 85%;
+  width: 83%;
   margin: 0 1%; 
+}
+.panel {
+  -webkit-box-shadow: none;
+  box-shadow: none;
 }
 .info-page .panel-title a {
   width: 100%;
@@ -526,6 +530,9 @@ ul.accordion {
 .panel-group .panel-heading+.panel-collapse>.panel-body {
 	border-top: 0;
 }
+.panel-body.haut {
+  padding: .5% 3% !important;
+}
 .panel-group.home #headingOne, 
 .panel-group.home #collapseOne .panel-body  {
   background-color: #00be9c;
@@ -552,22 +559,24 @@ ul.accordion {
 .home .panel-title a:visited {
   text-decoration: none;
 }
+.panel-group {
+  margin: 30px 0;
+}
 .panel-group .panel+.panel {
 	margin-top: 0;
 }
-.home .panel-title a.collapsed::before {
-  content: "\f067";
+.home .panel-title a::before {
+  content: "\f272";
   font-weight: 100; 
 	font-family: "FontAwesome";
-	color: #ffffff;
+  color: #ffffff;
+  font-size: 1.25em;
 }
-.home .panel-title a::before {
-	content: "\f068";
-	font-family: "FontAwesome";
-	color: #ffffff;
+.home .panel-title a.collapsed::before {
+  content: "\f271";
 }
 .info-page .panel-body p {
-  font-size: 1.2em;
+  font-size: 1em;
 }
 .panel-body .info {
   max-height: 300px;
@@ -585,6 +594,12 @@ ul.accordion {
 .panel-blue .panel-heading h4 {
   font-size: 1.35em;
   padding: 15px;
+}
+.panel.panel-default {
+  margin-bottom: 20px;
+}
+#accordion .panel:nth-last-child(1) {
+  margin-bottom: 50px;
 }
 .panel.panel-default.panel-blue {
   margin-top: 30px;
@@ -682,14 +697,19 @@ ul.disc-list {
   -webkit-transform: rotate(180deg);
   transform: rotate(180deg);
 }
-.vertical-line {
-  display: inline;
+.info-page.tutkinnonosat .right-column .bullets {
+  z-index: 0;
   position: relative;
-  padding: 18em 0;
-  width: 0;
-  border: 1px solid #00516c;
-  top: 24em;
+}
+.info-page.tutkinnonosat .right-column .bullets::after {
+  content: "";
+  position: absolute;
+  border: 1px solid #000000;
+  height: 93%;
+  display: block;
+  z-index: -1;
   left: 50%;
+  top: 37px;
 }
 .info-page.tutkinnonosat .right-column .bullets ul {
   padding: 3% 6%;
@@ -783,13 +803,19 @@ nav.navbar-right li {
   right: 20px;
   color: #63666b;
 }
-
 .jumbotron {
   margin-bottom: 0;
+  background-color: transparent;
 }
 #call-to-action {
   background-image:url('../images/o-EDUCATION-facebook.jpg');
   background-repeat:no-repeat;
+  background-size:cover;
+  background-position:center;
+}
+#call-to-action-secondary {
+  background-image:url('../images/greybg.png');
+  background-repeat:repeat;
   background-size:cover;
   background-position:center;
 }
@@ -827,6 +853,9 @@ nav.navbar-right li {
 .search-button:hover {
   text-decoration: none;
   color: #ffffff;
+}
+.panel-group.home .panel.panel-default {
+  margin-bottom: 0;
 }
 ul{
   list-style-type: none;
@@ -887,35 +916,30 @@ ul.right-links li a:hover {
   font-weight: bold;
   display: inline-grid;
   margin: -5px;
+  text-align: center;
+}
+.haut .date::after {
+  top: -.75em;
+  font-size: .45em;
+  letter-spacing: -2px;
+  text-align: center;
 }
 .haut:nth-child(1) .date::after {
-  content: "kesä";
+  content: "marras";
   position: relative;
-  top: -.75em;
-  font-size: .45em;
-  letter-spacing: -2px;
-  text-align: center;
 }
 .haut:nth-child(2) .date::after {
-  content: "heinä";
+  content: "tammi";
   position: relative;
-  top: -.75em;
-  font-size: .45em;
-  letter-spacing: -2px;
-  text-align: center;
 }
 .haut:nth-child(3) .date::after {
-  content: "syys";
+  content: "maalis";
   position: relative;
-  top: -.75em;
-  font-size: .45em;
-  letter-spacing: -2px;
-  text-align: center;
 }
 .haut .appointment {
   float: right;
   padding: 5.5%;
-  width: 74%;
+  width: 70%;
 }
 .haut .content {
   height: 60px;
@@ -947,6 +971,9 @@ ul.right-links li a:hover {
 	  max-width: 400px;
 	  width: 100%;
   }
+.ajankohtaista {
+  visibility: hidden;
+}
 .ajankohtaista img {
   width: 100%;
   min-height: 181px;
@@ -1041,14 +1068,17 @@ footer p {
   background-image: none; 
   display: block;
   position: relative;
-  top: 0;
-}
-.filter-button.index-page {
-
+  top: 2px;
+  background: transparent;
+  transition: all ease-in .3s;
 }
 .filter-button.index-page::after {
   color: #337ab7;
   content: "+ Rajaa etsintää";  
+}
+.filter-button.index-page.sulje {
+  transition: all ease-in 1s;
+  background: #ffffff;
 }
 .filter-button.index-page.sulje::after {
   content: "- Sulje rajaimet";  
@@ -1978,10 +2008,20 @@ p.just-info {
 }
 .search-box .text a {
   font-weight: bold;
-  font-size: 1em;
+  font-size: 1.1em;
 }
 .interest-boxes {
   margin-bottom: 40px;
+}
+.panel-collapse .dropdown {
+  top: 22px;
+  left: 15px;
+}
+.panel-collapse .dropdown .btn{
+  font-size: 1em
+}
+.dropdown .btn {
+  border-radius: 2px;
 }
 @media (max-width: 1200px) {
   .globe i {
@@ -1997,6 +2037,14 @@ p.just-info {
   .globe i {
     font-size: 5.25em;
   }
+  .haut .date {
+    font-size: 3.7em;
+  }
+  .haut .appointment {
+    float: right;
+    padding: 5.5%;
+    width: 75%;
+}
   footer p {
     font-size: 1em;
   }
@@ -2036,9 +2084,6 @@ p.just-info {
   .haut {
     width: 30%;
   }
-  .vertical-line {
-    padding: 22em 0;
-  }
   .info-page.tutkinnonosat .right-column .bullets ul {
     padding: 0;
     right: 3%;
@@ -2048,9 +2093,8 @@ p.just-info {
   }
 }
 @media (max-width: 991px) {
-.vertical-line {
-    top: 24em;
-    left: 56%;
+.info-page.tutkinnonosat .right-column .bullets::after {
+  height: 90vh;
 }
 .info-page.tutkinnonosat .right-column .bullets ul {
   padding: 3% 6%;
@@ -2066,13 +2110,13 @@ p.just-info {
 }
 @media (max-width: 768px) {
   #collapseOne .date::after {
-    content: "kesä";
+    content: "marras";
   }
   #collapseTwo .date::after {
-    content: "heinä";
+    content: "tammi";
   }
   #collapseThree .date::after {
-    content: "syys";
+    content: "maalis";
   }
   .panel .appointment {
     width: 84%;
@@ -2080,6 +2124,9 @@ p.just-info {
   }
   .panel .content {
     height: 20px;
+  }
+  .ajankohtaista {
+    display: none;
   }
   .info-page .panel-heading h4 {
     font-size: .85em;
@@ -2140,6 +2187,17 @@ p.just-info {
   .filter-button.sulje {
     z-index: 998;
   }
+  .filter-button.index-page.sulje {
+    transition: all ease-in 1.8s;
+    background: #ffffff;
+    width: 85%;
+  }
+  .filter-button.index-page {
+    top: 2px;
+    background: transparent;
+    width: 85%;
+    transition: all ease-in .2s;
+}
   .panel-body .info {
     max-height: fit-content;
     margin-bottom: 30px;
@@ -2147,7 +2205,7 @@ p.just-info {
   .filter-button::after {
     position: relative;
     top: 21%;
-    left: 12%;
+    left: 4%;
     font-size: .95em;
   }
   .filter-options {
@@ -2175,6 +2233,7 @@ p.just-info {
   .wrapper::after {
     color: #ffffff;
     font-size: 1.6em;
+    visibility: hidden;
   } 
   .text {
     width: 75%;
@@ -2183,12 +2242,11 @@ p.just-info {
     top: 11px;
   }
   .right-column {
-    margin: 30px 0 ;
     min-height: 120px;
     height: auto;
   }
   .left-column, .right-column {
-    margin-bottom: 30px;
+    margin-bottom: 0;
     padding-bottom: 0;
 }
   .social-media li {
@@ -2200,7 +2258,8 @@ p.just-info {
   width: 100%;
 }
 .panel-body .date {
-  font-size: 3.6em;
+  font-size: 5.3em;
+  text-align: center;
 }
 .info-page .panel-body p {
   font-size: 1em;
@@ -2278,6 +2337,10 @@ button.toggle-compare {
 .filter-container.open {
   position: fixed;
   z-index: 995;
+}
+.filter-container.index {
+  max-width: none;
+  width: 100%;
 }
 .filter-options {
   z-index: 995;
@@ -2365,6 +2428,18 @@ button.toggle-compare {
   }
 }
 @media (max-width: 425px) {
+  .haut .appointment {
+    width: 75%;
+  } 
+  .panel-collapse .dropdown .btn{
+    font-size: .945em
+  }
+  .panel-body .date {
+    font-size: 4.3em;
+  }
+  .haut {
+    min-height: 177px;
+  }
   .info-page .left-column h1 i {
     top: 0;
 }
@@ -2385,11 +2460,25 @@ button.toggle-compare {
 }
 }
 @media (max-width: 375px) {
-  .header-search input {
-    width: 70%;
+.haut .appointment {
+  width: 70%;
+}  
+.panel-body .date {
+  font-size: 4em;
+}
+.header-search input {
+  width: 70%;
+}
+.info-page.tutkinnonosat .right-column .bullets::after {
+  height: 90vh;
 }
 .app-navigation-bar a::after {
-  font-size: 0.85em;
+  font-size: 0.8em;
+}
+}
+@media (max-width: 320px) {
+.panel-collapse .dropdown .btn {
+  font-size: .8em;
 }
 }
 @media (min-width: 768px) {
