--- a/css/styles.css
+++ b/css/styles.css
@@ -347,11 +347,8 @@ li.sidebar-brand {
 .dropdown-menu li {
   margin: 0 5%;
 }
-.header-search {
-    padding: 4% 0;
-}
 .header-search input {
-  margin-left: 1%;
+  margin-left: 0;
 }
 @font-face {
   font-family: "Open Sans", arial, sans-serif;
@@ -819,6 +816,13 @@ nav.navbar-right li {
   background-size:cover;
   background-position:center;
 }
+#call-to-action-secondary .jumbotron {
+  padding: 6% 0 4%;
+}
+#call-to-action-secondary .search-button {
+  font-size: 1.5em;
+  padding: 34px 28px
+}
 #call-to-action .jumbotron{
   background: transparent;
   position: relative;
@@ -831,7 +835,10 @@ nav.navbar-right li {
   max-width: 450px;
   width: 100%;
   height: 50px;
-  margin-left: 5%;
+  margin-left: 15px;
+}
+#call-to-action-secondary .header-search input {
+  margin-left: 0;
 }
 .search-button {
   background-color: #e77e22;
@@ -1024,16 +1031,9 @@ footer p {
 .social-media i {
   font-size: 1.7em;
 }
-
 .container-fluid .col-xs-12 {
 	padding-right: 0;
 	padding-left: 0; 
-}
-.header-search {
-  padding: 4% 0;
-}
-.header-search input {
-  margin-left: 1%;
 }
 .filter-button {
   background-image: -webkit-gradient( linear, left top, left bottom, color-stop(0, #5B5B5B), color-stop(0.47, #464646));
@@ -1049,7 +1049,7 @@ footer p {
   position: absolute;
   padding: .55% 1.4%;
   z-index: 999;
-  top: 30px;
+  top: 55px;
   font-size: .95em;
 }
 .filter-button::after {
@@ -1935,7 +1935,7 @@ button.toggle-compare.closed::after {
   height: auto;
   padding: 5px 0;
   bottom: 0;
-  z-index: 999;
+  z-index: 99;
   background: #159ecc;
 }
 .app-navigation-bar a {
@@ -2023,6 +2023,18 @@ p.just-info {
 .dropdown .btn {
   border-radius: 2px;
 }
+@media (max-width: 1700px) {
+  .filter-button {
+    padding: .7% 1.4%;
+    top:40px;
+  }
+}
+@media (max-width: 1400px) {
+  .filter-button {
+    padding: .7% 1.4%;
+    top:28px;
+  }
+}
 @media (max-width: 1200px) {
   .globe i {
     font-size: 5.25em;
@@ -2031,6 +2043,10 @@ p.just-info {
     width: 70%;
     max-height: 92px;
     height: auto;
+  }
+  .filter-button {
+    padding: 1% 2%;
+    top:18px;
   }
 }
 @media (max-width: 1024px) {
@@ -2052,11 +2068,15 @@ p.just-info {
     padding-left: .2em;
   }
   .filter-button {
-    padding: 1% 2%;
+    padding: 1.25% 2%;
+    top: 40px;
   }
   .filter-options.index {
     left: 5px;
   }
+  #call-to-action-secondary .jumbotron {
+    padding: 7% 0 6%;
+}
 }
 @media (max-width: 991px) {
   .box-container:nth-child(even) {
@@ -2143,6 +2163,9 @@ p.just-info {
   .info-page .left-column h1 i {
     top: 0;
   }
+  #call-to-action-secondary .jumbotron {
+    padding: 13% 0 7.5%;
+  }
   .haut .date {
     font-size: 4.5em;
     position: relative;
@@ -2159,11 +2182,11 @@ p.just-info {
     max-width: 554px;
     width: 75%;
     height: 43px;
-    margin-left: 4%;
+    font-size: .9em;
   }
   .search-button {
     border: 4px solid #ffffff;
-    padding: 10px 14px;
+    padding: 10px 14px !important;
     margin-left: 10px;
   }
   .search-button::after {
@@ -2179,10 +2202,11 @@ p.just-info {
     margin: 0;
   }
   .filter-button {
-    padding: 1%;
+    padding: .5%;
     width: 165px;
     height: 40px;
     z-index: 998;
+    top: 35px;
   }
   .filter-button.sulje {
     z-index: 998;
@@ -2237,9 +2261,6 @@ p.just-info {
   } 
   .text {
     width: 75%;
-  }
-  .filter-button {
-    top: 11px;
   }
   .right-column {
     min-height: 120px;
@@ -2453,10 +2474,19 @@ button.toggle-compare {
   float: left;
 }
 .filter-button {
-  top: 10px;
+  top: 16px;
+  width: 140px;
+  height: 35px;
 }
 .toteutus .header span:not(.light-font) {
   margin: -.5em 1.3em .5em;
+}
+.filter-button::after {
+  top: 15%;
+  left: 8%;
+  width: 144px;
+  height: 35px;
+  font-size: .85em;
 }
 }
 @media (max-width: 375px) {
@@ -2480,9 +2510,18 @@ button.toggle-compare {
 .panel-collapse .dropdown .btn {
   font-size: .8em;
 }
+.filter-button::after {
+  top: 15%;
+  left: 8%;
+  font-size: .85em;
+}
+#call-to-action-secondary .jumbotron {
+  padding: 19% 0 10%;
+}
 }
 @media (min-width: 768px) {
   .navbar-toggle {
 	  display: block;
   }
+
 }
