--- a/css/styles.css
+++ b/css/styles.css
@@ -1916,6 +1916,8 @@ button.toggle-compare.closed::after {
   display: block;
   padding: 25px 15px;
   font-weight: bold;
+  height: 75px;
+  overflow: hidden;
   margin-bottom: -1px;
   border-left: none;
   border-right: none;
