--- a/css/styles.css
+++ b/css/styles.css
@@ -530,6 +530,9 @@ ul.accordion {
 .panel-body.haut {
   padding: .5% 3% !important;
 }
+.appointment-block .panel-body.haut {
+  width: 100%;
+}
 .panel-group.home #headingOne, 
 .panel-group.home #collapseOne .panel-body  {
   background-color: #00be9c;
@@ -809,6 +812,7 @@ nav.navbar-right li {
   background-repeat:no-repeat;
   background-size:cover;
   background-position:center;
+  display: block;
 }
 #call-to-action-secondary {
   background-image:url('../images/greybg.png');
@@ -2042,6 +2046,141 @@ p.just-info {
 }
 .dropdown .btn {
   border-radius: 2px;
+}
+.blocks-column {
+  margin: 30px 0 0;
+}
+.block-layer {
+  overflow: hidden;
+}
+.block-layer:hover {
+  -webkit-transition: -webkit-box-shadow 300ms ease;
+  -moz-transition: -moz-box-shadow 300ms ease;
+  transition: box-shadow 300ms ease;
+  -webkit-box-shadow: -1px -2px 21px 2px rgba(0,0,0,0.3);
+  -moz-box-shadow: -1px -2px 21px 2px rgba(0,0,0,0.3);
+  box-shadow: -1px -2px 21px 2px rgba(0,0,0,0.3);
+}
+.block-layer.content {
+  height: 420px;
+  overflow: hidden;
+  width: 100%;
+}
+.block-layer h5 {
+  color: #FFF;
+}
+
+.block-layer p {
+  color: #FFF;
+  margin: 10px 0;
+  line-height: 22px;
+  letter-spacing: 0;
+}
+
+.block-layer .inner {
+  position: relative;
+  z-index: 1;
+}
+.block-layer .block-content {
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  height: 89%;
+  bottom: 100%;
+  left: 0;
+  opacity: 0;
+  padding: 1% 30px 15px 30px;
+  -webkit-transition: bottom 300ms ease-out, opacity 300ms ease;
+  -o-transition: bottom 300ms ease-out, opacity 300ms ease;
+  transition: bottom 300ms ease-out, opacity 300ms ease;
+}
+.block-layer .block-content a {
+  width: 100%;
+  display: block;
+  text-align: right;
+  font-weight: bold;
+  color: #ffffff;
+}
+.block-layer .block-content a::after {
+  content: "\f061";
+  font-family: "FontAwesome";
+  position: relative;
+  left: 10px;
+  font-weight: 100;		
+}
+.block-layer .block-content p {
+  height: 80%;
+  overflow: hidden;
+}
+.block-layer:hover .block-content {
+  bottom: 0;
+  opacity: 1;
+  -webkit-box-shadow: inset 0 20px 5px -20px rgba(0,0,0,0.15);
+  -moz-box-shadow: inset 0 20px 5px -20px rgba(0,0,0,0.15);
+  box-shadow: inset 0 20px 5px -20px rgba(0,0,0,0.15);
+}
+
+.block-layer .header {
+  position: relative;
+  z-index: 1;
+  top: -35px;
+  padding: 30px;
+  height: 173px;
+}
+.block-layer .header h3 {
+  color: #ffffff;
+  font-size: 1.3em;
+}
+.block-layer.tiedote .header,
+.block-layer.tiedote .inner {
+  background-color: #e77e22;
+}
+.block-layer.tiedote .block-content {
+  background-color: #da7720;
+}
+.block-layer.uutinen .header,
+.block-layer.uutinen .inner{
+  background-color: #2c97dd;
+}
+.block-layer.uutinen .block-content {
+  background-color: #2a8ecf;
+}
+.block-layer.koulutuksen .header,
+.block-layer.koulutuksen .inner {
+  background-color: #4eca82;
+}
+.block-layer.koulutuksen .block-content {
+  background-color: #49bb79;
+}
+.block-layer.content .block-image-background {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 70%;
+  width: 100%;
+  background-size: cover;
+  z-index: 0;
+}
+.block-layer.tiedote .block-image-background {
+  background-image: url('../images/tiedote.jpg');
+  background-position: center -20px;
+}
+.block-layer.uutinen .block-image-background {
+  background-image: url('../images/uutinen.jpg');
+  background-position: center 4px;
+}
+.block-layer.koulutuksen .block-image-background {
+  background-image: url('../images/koulutuksen.jpg');
+  background-position: center 4px;
+}
+.block-layer.content .block-image-background.some-bg {
+  height: 80%;
+}
+a.titlelink,
+.titlelink h5 {
+  text-transform: none;
+  line-height: 1.3;
+  text-decoration: none;
 }
 @media (max-width: 1700px) {
   .filter-button {
